fix character notebook location

--- a/docs/notebooks/character_json.ipynb
+++ b/docs/notebooks/character_json.ipynb
@@ -121,7 +121,7 @@
    "id": "87f01558",
    "metadata": {},
    "source": [
-    "![](../gens/U8e9aIO9EP7gz7IPpObKgAc@0.5x.webp)\n"
+    "![](gens/U8e9aIO9EP7gz7IPpObKgAc@0.5x.webp)\n"
    ]
   },
   {
@@ -131,7 +131,7 @@
    "source": [
     "The generation using this JSON is surprisingly stable even at `temperature=1.0`, retaining roughly the same character design across generations.\n",
     "\n",
-    "![](../gens/hacker@0.5x.webp)\n"
+    "![](gens/hacker@0.5x.webp)\n"
    ]
   },
   {
