--- a/docs/notebooks/character_json.ipynb
+++ b/docs/notebooks/character_json.ipynb
@@ -9,7 +9,9 @@
     "\n",
     "Due to Gemini 2.5 Image Flash's long context window (relative to models such as Flux Pro/Kontext), you can put a massive amount of data in the prompt. Additionally, due to the more modern text encoder and multimodal training, the model is more receptive to stuctured data such as JSON, and in testing it can adhere to _all_ fields, including highly-nuanced ones.\n",
     "\n",
-    "_**Ed. Note**: The character JSON used in this post was AI generated as a part of a very rough proof-of-concept for a separate project. It is far from optimized, but is more-than-enough to demonstrate the effectiveness of JSON inputs._\n"
+    "The character JSON for this Notebook is located [here](../files/character_json.json).\n",
+    "\n",
+    "_**Maintainer's Note**: The character JSON used in this post was AI generated as a part of a very rough proof-of-concept for a separate project. It is far from optimized, but is more-than-enough to demonstrate the effectiveness of JSON inputs._\n"
    ]
   },
   {
