--- a/docs/notebooks/html_webpage.ipynb
+++ b/docs/notebooks/html_webpage.ipynb
@@ -7,9 +7,11 @@
    "source": [
     "# Generating an image of a webpage using HTML\n",
     "\n",
+    "_**Maintainer's Note**: There is likely no practical use case for this line of prompting, but it's a really cool test case._\n",
+    "\n",
     "Due to Gemini 2.5 Image Flash's long context window (relative to models such as Flux Pro/Kontext), you can put a massive amount of data in the prompt. This includes HTML.\n",
     "\n",
-    "`counter_app.html` is an AI-generated single page application plain HTML, vanilla inline CSS, and vanilla JavaScript:\n",
+    "[counter_app.html](../files/counter_app.html) is an AI-generated (i.e. not in the training dataset) single page application plain HTML, vanilla inline CSS, and vanilla JavaScript:\n",
     "\n",
     "![](gens/webpage_screenshot.png)\n",
     "\n",
@@ -107,7 +109,7 @@
    "source": [
     "![](gens/oMy9aNSICKujqtsPzK-q6Ac@0.5x.png)\n",
     "\n",
-    "Close enough!\n"
+    "Close enough! At the least, it shows Gemini 2.5 Flash Image knows how to parse RGB hex codes into colors.\n"
    ]
   },
   {
