removed errant line segments

--- a/docs/notebooks/pose_control.ipynb
+++ b/docs/notebooks/pose_control.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "16560091",
+   "metadata": {},
+   "source": [
+    "_**Maintainer's Note**: These images were generated with a base drawing image that had potentially misinterpreted errant line segments._\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "27803e1a",
