adjust webpage demo

--- a/docs/notebooks/html_webpage.ipynb
+++ b/docs/notebooks/html_webpage.ipynb
@@ -37,7 +37,7 @@
     {
      "data": {
       "text/plain": [
-       "GemImg(model='gemini-2.5-flash-image-preview')"
+       "GemImg(model='gemini-2.5-flash-image')"
       ]
      },
      "execution_count": 2,
@@ -76,29 +76,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "35570e48",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'oMy9aNSICKujqtsPzK-q6Ac.png'"
+       "'Y3r1aPHnNIfiqtsP3_2XyA4.png'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "prompt = f\"\"\"\n",
-    "Create an image of the rendered webpage represented by the provided HTML, CSS, and JavaScript.\n",
+    "Create a rendering of the webpage represented by the provided HTML, CSS, and JavaScript. The rendered webpage MUST take up the complete image.\n",
     "---\n",
     "{html}\n",
     "\"\"\"\n",
     "\n",
-    "gen = g.generate(prompt)\n",
+    "gen = g.generate(prompt, aspect_ratio=\"4:3\")\n",
     "gen.image_path"
    ]
   },
@@ -107,24 +107,24 @@
    "id": "e37a8afa",
    "metadata": {},
    "source": [
-    "![](gens/oMy9aNSICKujqtsPzK-q6Ac@0.5x.png)\n",
+    "![](gens/Y3r1aPHnNIfiqtsP3_2XyA4.webp)\n",
     "\n",
     "Close enough! At the least, it shows Gemini 2.5 Flash Image knows how to parse RGB hex codes into colors.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "a61a6487",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Usage(prompt_tokens=907, completion_tokens=1290)"
+       "Usage(prompt_tokens=916, completion_tokens=1290)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
