add Imagen.subimages field for grids

--- a/docs/notebooks/grid_generation.ipynb
+++ b/docs/notebooks/grid_generation.ipynb
@@ -97,7 +97,7 @@
     "\"\"\"\n",
     "\n",
     "gen = g.generate(prompt, grid=grid, save_dir=\"gens\")\n",
-    "print(f\"Generated {len(gen.images)} images\")\n",
+    "print(f\"Generated {len(gen.subimages)} subimages from {len(gen.images)} grid image(s)\")\n",
     "print(f\"Image paths: {gen.image_paths}\")"
    ]
   },
@@ -108,7 +108,7 @@
    "source": [
     "## Access Individual Images\n",
     "\n",
-    "The sliced subimages are stored in `gen.images` and saved individually.\n"
+    "The original grid image is stored in `gen.images`, while the sliced subimages are stored in `gen.subimages` and saved individually.\n"
    ]
   },
   {
@@ -118,8 +118,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Display the first image (Spring)\n",
-    "gen.images[0]"
+    "# Display the first subimage (Spring)\n",
+    "gen.subimages[0]"
    ]
   },
   {
@@ -129,8 +129,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Display the second image (Summer)\n",
-    "gen.images[1]"
+    "# Display the second subimage (Summer)\n",
+    "gen.subimages[1]"
    ]
   },
   {
@@ -140,8 +140,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Display the third image (Autumn)\n",
-    "gen.images[2]"
+    "# Display the third subimage (Autumn)\n",
+    "gen.subimages[2]"
    ]
   },
   {
@@ -151,8 +151,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Display the fourth image (Winter)\n",
-    "gen.images[3]"
+    "# Display the fourth subimage (Winter)\n",
+    "gen.subimages[3]"
    ]
   },
   {
@@ -195,7 +195,7 @@
     "\"\"\"\n",
     "\n",
     "gen_cats = g.generate(prompt_16, grid=grid_4x4, save_dir=\"gens\")\n",
-    "print(f\"Generated {len(gen_cats.images)} cat images!\")"
+    "print(f\"Generated {len(gen_cats.subimages)} cat subimages!\")"
    ]
   },
   {
