--- a/docs/notebooks/grid_generation.ipynb
+++ b/docs/notebooks/grid_generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0362bd40",
    "metadata": {},
    "outputs": [],
@@ -22,12 +22,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "dccfe3de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GemImg(model='gemini-3-pro-image-preview')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "g = GemImg(model=\"gemini-3-pro-image\")\n",
+    "g = GemImg(model=\"gemini-3-pro-image-preview\")\n",
     "g"
    ]
   },
@@ -48,10 +59,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1bd8083e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Grid(rows=2, cols=2, aspect_ratio='1:1', image_size='2K', num_images=4, output_resolution=(1024, 1024))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a 2x2 grid with 2K resolution\n",
     "grid = Grid(rows=2, cols=2, image_size=\"2K\")\n",
@@ -60,10 +82,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "264525b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of images: 4\n",
+      "Each image resolution: (1024, 1024)\n",
+      "Full grid resolution: (2048, 2048)\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the derived properties\n",
     "print(f\"Number of images: {grid.num_images}\")\n",
@@ -83,22 +115,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e7b2a608",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated 4 subimages from 1 grid image.\n",
+      "Grid Image path: 9sQnabOuMbyeqtsP7_LXEA.png\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = \"\"\"\n",
-    "Generate a 2x2 grid of images showing the four seasons.\n",
-    "Top-left: Spring - cherry blossoms in a park\n",
-    "Top-right: Summer - sunny beach with palm trees\n",
-    "Bottom-left: Autumn - colorful fall foliage in a forest\n",
-    "Bottom-right: Winter - snowy mountain landscape\n",
+    "Generate a 2x2 contiguous grid of 4 distinct award-winning images of a pair of cherry blossom trees in the following artistic styles, maintaining the same image composition of the trees across all 4 images:\n",
+    "- Oil Painting\n",
+    "- Watercolor\n",
+    "- Digital Art\n",
+    "- Pencil Sketch\n",
     "\"\"\"\n",
     "\n",
+    "# the aspect_ratio and image_size are inherited from the grid object\n",
     "gen = g.generate(prompt, grid=grid, save_dir=\"gens\")\n",
-    "print(f\"Generated {len(gen.subimages)} subimages from {len(gen.images)} grid image(s)\")\n",
-    "print(f\"Image paths: {gen.image_paths}\")"
+    "print(f\"Generated {len(gen.subimages)} subimages from {len(gen.images)} grid image.\")\n",
+    "print(f\"Grid Image path: {gen.image_path}\")"
    ]
   },
   {
@@ -113,46 +155,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "10bbe8d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'9sQnabOuMbyeqtsP7_LXEA-00.png'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Display the first subimage (Spring)\n",
-    "gen.subimages[0]"
+    "# Display the first subimage (Oil Painting)\n",
+    "gen.subimage_paths[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "c67e16bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'9sQnabOuMbyeqtsP7_LXEA-01.png'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Display the second subimage (Summer)\n",
-    "gen.subimages[1]"
+    "# Display the second subimage (Watercolor)\n",
+    "gen.subimage_paths[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "ea0a17ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'9sQnabOuMbyeqtsP7_LXEA-02.png'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Display the third subimage (Autumn)\n",
-    "gen.subimages[2]"
+    "# Display the third subimage (Digital Art)\n",
+    "gen.subimage_paths[2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "424706f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'9sQnabOuMbyeqtsP7_LXEA-03.png'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Display the fourth subimage (Winter)\n",
-    "gen.subimages[3]"
+    "# Display the fourth subimage (Pencil Sketch)\n",
+    "gen.subimage_paths[3]"
    ]
   },
   {
@@ -167,10 +253,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "25dddab7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of images: 16\n",
+      "Each image resolution: (1024, 1024)\n",
+      "Full grid resolution: (4096, 4096)\n"
+     ]
+    }
+   ],
    "source": [
     "grid_4x4 = Grid(rows=4, cols=4, image_size=\"4K\")\n",
     "print(f\"Number of images: {grid_4x4.num_images}\")\n",
@@ -180,22 +276,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "b6fa6c9a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated 16 subimages!\n"
+     ]
+    }
+   ],
    "source": [
     "prompt_16 = \"\"\"\n",
-    "Generate a 4x4 grid of 16 different cat breeds, each in a distinct pose.\n",
-    "Each cell should show a different breed with a clean background.\n",
-    "Include: Persian, Siamese, Maine Coon, British Shorthair,\n",
-    "Ragdoll, Bengal, Abyssinian, Scottish Fold,\n",
-    "Sphynx, Russian Blue, Norwegian Forest, Birman,\n",
-    "Burmese, Tonkinese, Himalayan, and Exotic Shorthair.\n",
+    "Generate a 4x4 contiguous grid of 16 bizarre and creative Pokémon designs inspired by the following real-world popular brands. Do not include any border or grid lines between the subimages. The brands to be represented are:\n",
+    "- Apple\n",
+    "- Amazon\n",
+    "- Google\n",
+    "- Microsoft\n",
+    "- Coca-Cola\n",
+    "- McDonald's\n",
+    "- Nike\n",
+    "- Disney\n",
+    "- Walmart\n",
+    "- Facebook\n",
+    "- Trader Joe's\n",
+    "- Visa\n",
+    "- Starbucks\n",
+    "- Supreme\n",
+    "- Sony\n",
+    "- Samsung\n",
+    "\n",
+    "You MUST obey ALL the FOLLOWING rules for these subimages:\n",
+    "- Add a text label anchored to the top left corner of the subimage with the text of the brand name\n",
+    "    - The text is left-justified, is the dominant color of the brand, has a black text stroke outline, and has the Impact font typeface\n",
+    "- Each subimage has a pure white background\n",
+    "- The art style resembles the official Pokémon artwork style\n",
+    "- Each Pokémon design is unique and not a copy of existing Pokémon designs\n",
+    "- Each Pokémon design MUST incorporate some elements of humorous anthropomorphism, such as eyes, nose, mouth, limbs, or other human-like features. These elements should vary between designs.\n",
     "\"\"\"\n",
     "\n",
-    "gen_cats = g.generate(prompt_16, grid=grid_4x4, save_dir=\"gens\")\n",
-    "print(f\"Generated {len(gen_cats.subimages)} cat subimages!\")"
+    "gen_brands = g.generate(prompt_16, grid=grid_4x4, save_dir=\"gens\")\n",
+    "print(f\"Generated {len(gen_brands.subimages)} subimages!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "33bc87fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Kc8nad-WHK-dz7IPi6GLuQY-00.png'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Display the first subimage (Apple)\n",
+    "gen_brands.subimage_paths[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ffa3024",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Kc8nad-WHK-dz7IPi6GLuQY-15.png'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Display the second subimage (Amazon)\n",
+    "gen_brands.subimage_paths[2]"
    ]
   },
   {
@@ -207,22 +374,25 @@
     "\n",
     "If you only want the sliced subimages and not the full grid, set `save_original_image=False`.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e316c76",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid_no_original = Grid(rows=2, cols=2, image_size=\"2K\", save_original_image=False)\n",
-    "grid_no_original"
-   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "gemimg",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
