grid generation images

--- a/docs/notebooks/grid_generation.ipynb
+++ b/docs/notebooks/grid_generation.ipynb
@@ -145,6 +145,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e2a53ec",
+   "metadata": {},
+   "source": [
+    "![](gens/9sQnabOuMbyeqtsP7_LXEA.webp)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ce4e3e71",
    "metadata": {},
    "source": [
@@ -176,6 +184,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fcc290a3",
+   "metadata": {},
+   "source": [
+    "![](gens/9sQnabOuMbyeqtsP7_LXEA-00.webp)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "c67e16bf",
@@ -195,6 +211,14 @@
    "source": [
     "# Display the second subimage (Watercolor)\n",
     "gen.subimage_paths[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15ef0dd6",
+   "metadata": {},
+   "source": [
+    "![](gens/9sQnabOuMbyeqtsP7_LXEA-01.webp)\n"
    ]
   },
   {
@@ -220,6 +244,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4ba24cbb",
+   "metadata": {},
+   "source": [
+    "![](gens/9sQnabOuMbyeqtsP7_LXEA-02.webp)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "424706f3",
@@ -239,6 +271,14 @@
    "source": [
     "# Display the fourth subimage (Pencil Sketch)\n",
     "gen.subimage_paths[3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "649bb0b3",
+   "metadata": {},
+   "source": [
+    "![](gens/9sQnabOuMbyeqtsP7_LXEA-03.webp)\n"
    ]
   },
   {
@@ -322,47 +362,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "33bc87fa",
+   "cell_type": "markdown",
+   "id": "90924ec9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Kc8nad-WHK-dz7IPi6GLuQY-00.png'"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# Display the first subimage (Apple)\n",
-    "gen_brands.subimage_paths[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ffa3024",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Kc8nad-WHK-dz7IPi6GLuQY-15.png'"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Display the second subimage (Amazon)\n",
-    "gen_brands.subimage_paths[2]"
+    "![](gens/Kc8nad-WHK-dz7IPi6GLuQY.webp)\n"
    ]
   },
   {
