system prompt images

--- a/docs/notebooks/system_prompt.ipynb
+++ b/docs/notebooks/system_prompt.ipynb
@@ -84,6 +84,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "116142a5",
+   "metadata": {},
+   "source": [
+    "![](gens/TaUoadW_HLrUz7IPvfbzsQk.webp)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1fc92434",
    "metadata": {},
    "source": [
@@ -138,6 +146,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "30bc0285",
+   "metadata": {},
+   "source": [
+    "![](gens/zqUoabigLLyjqtsPs_vzwQs.webp)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1667b17d",
    "metadata": {},
    "source": [
@@ -179,6 +195,20 @@
     ")\n",
     "gen.image_path"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "277444b2",
+   "metadata": {},
+   "source": [
+    "![](gens/maYoacJQvofPsg_R--KwBg.webp)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e933682",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
